--- a/app/views/arquitects/show.html.erb
+++ b/app/views/arquitects/show.html.erb
@@ -7,7 +7,7 @@
       <br>
       <br>
       <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
-      <%= link_to @arquitect.company_website, @arquitect.company_website %><br>
+      <%= link_to @arquitect.company_website, @arquitect.company_website, :target => "_blank" %><br>
       
       
       <strong><%= label_tag :nil, t('companycontactname') %></strong>  
