--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -8,9 +8,7 @@
       <br>
       <br>
       <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
-      <%= link_to @service.company_website, @service.company_website %><br>
-      
-      
+      <%= link_to @service.company_website, @service.company_website, , :target => "_blank" %><br>
       <strong><%= label_tag :nil, t('companycontactname') %></strong>  
      <%= @service.contact_name %>
      <br>
