--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -27,7 +27,7 @@
         <div class="caption">
           <h4><strong><%= service.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
-            <%= link_to service.company_website, service.company_website %><br>
+            <%= link_to service.company_website, service.company_website, :target => "_blank" %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= service.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
