--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -32,7 +32,7 @@
             <%= service.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= service.address %><br> 
-           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= service.city %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><br><%= service.city %><br>
            <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= service.zipcode %><br>
            <br>
            
