--- a/app/views/asphalts/index.html.erb
+++ b/app/views/asphalts/index.html.erb
@@ -28,7 +28,7 @@
         <div class="caption">
           <h4><strong><%= asphalt.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
-            <%= link_to asphalt.company_website, asphalt.company_website %><br>
+            <%= link_to asphalt.company_website, asphalt.company_website, :target => "_blank" %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= asphalt.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
@@ -38,9 +38,10 @@
            <br>
            
            <td><%= link_to 'Show', asphalt, class: "btn btn-success" %></td>
-        
+         <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_asphalt_path(asphalt), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', asphalt, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
