--- a/app/views/airconditioners/show.html.erb
+++ b/app/views/airconditioners/show.html.erb
@@ -8,7 +8,7 @@
       <br>
       <br>
       <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
-      <%= link_to @airconditioner.company_website, @airconditioner.company_website %><br>
+      <%= link_to @airconditioner.company_website, @airconditioner.company_website, :target => "_blank" %><br>
       
       
       <strong><%= label_tag :nil, t('companycontactname') %></strong>  
