--- a/app/views/airconditioners/new.html.erb
+++ b/app/views/airconditioners/new.html.erb
@@ -9,4 +9,4 @@
 
 <%= render 'form' %>
 
-<%= ink_to t('back'), airconditioners_path, class: "btn btn-link" %>
+<%= link_to t('back'), airconditioners_path, class: "btn btn-link" %>
