--- a/app/views/residentials/_form.html.erb
+++ b/app/views/residentials/_form.html.erb
@@ -53,7 +53,7 @@
   </div>
   <div class="col-md-4">
     <%= f.label :zip_code %><br>
-    <%= f.number_field :zip_code, class: "form-control" %><br>
+    <%= f.text_field :zip_code, class: "form-control" %><br>
   </div>
   <div class="col-md-4">
     <%= f.label :lot_size %><br>
