--- a/app/views/residentials/index.html.erb
+++ b/app/views/residentials/index.html.erb
@@ -118,9 +118,6 @@
       <br>
       <br>
       <p>
-
-               
- 
 <div class="center"> 
 <div class="row">
   <% @residentials.each do |residential| %>
@@ -160,7 +157,7 @@
 
 </div>
 </div>
-
+</div>
 <br>
 <% if user_signed_in? %>
 <%= link_to t('new_residential'), new_residential_path, class: "btn btn-success" %>
