--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -31,7 +31,7 @@
             <%= lawyer.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= lawyer.address %><br> 
-           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= lawyer.city %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><br><%= lawyer.city %><br>
            <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= lawyer.zipcode %><br>
            <br>
            
