--- a/app/views/accountants/index.html.erb
+++ b/app/views/accountants/index.html.erb
@@ -26,12 +26,12 @@
         <div class="caption">
           <h4><strong><%= link_to accountant.company_name, accountant %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
-            <%= link_to accountant.company_website, accountant.company_website %><br>
+            <%= link_to accountant.company_website, accountant.company_website, :target => "_blank" %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= accountant.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= accountant.address %><br> 
-           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= accountant.city %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><br><%= accountant.city %><br>
            <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= accountant.zipcode %><br>
            <br>
            <% if user_signed_in? && current_user.admin? %>
@@ -49,6 +49,6 @@
    
 <br>
 <br>
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_accountant_path, class: "btn btn-success" %>
-
+<% end %>
