--- a/app/views/plumbings/show.html.erb
+++ b/app/views/plumbings/show.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div class="col-md-6">
     <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
-    <%= @painting.company_description %>
+    <%= @plumbing.company_description %>
   </div>
 
 </div>
