--- a/app/views/countertops/index.html.erb
+++ b/app/views/countertops/index.html.erb
@@ -26,7 +26,7 @@
         <div class="caption">
           <h4><strong><%= countertop.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
-            <%= link_to countertop.company_website, countertop.company_website %><br>
+            <%= link_to countertop.company_website, countertop.company_website, :target => "_blank" %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= countertop.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
