--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -22,7 +22,7 @@
     <div class="row">
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
-      <div class="thumbnail" class="img-responsive" style="width:100%; height:auto;">
+      <div class="thumbnail" class="img-responsive" style="width:100%; height:100%;">
         <%= link_to image_tag(landscaping.image.url), landscaping %>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
