--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -17,12 +17,11 @@
   <% end %>
 
 
-<div class="thumbnail">
+<div class="thumbnail class="img-responsive" style="width:100%; height:100%;"">
   <div class="center"> 
     <div class="row">
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
-      <div class="thumbnail" class="img-responsive" style="width:100%; height:100%;">
         <%= link_to image_tag(landscaping.image.url), landscaping %>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
@@ -47,7 +46,6 @@
     <% end %>
     </div>
 
-  </div>
 </div> 
 
 
