--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -17,7 +17,7 @@
   <% end %>
 
 
-<div class="thumbnail class="img-responsive" style="width:100%; height:100%;"">
+<div class="thumbnail class="img-responsive" style="width:100%; height:auto;"">
   <div class="center"> 
     <div class="row">
      <% @landscapings.each do |landscaping| %>
@@ -46,7 +46,6 @@
     <% end %>
     </div>
 </div>
-</div> 
 
 
 <br>
