--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -17,7 +17,7 @@
   <% end %>
 
 
-<div class="thumbnail class="img-responsive" style="width:100%; height:auto;"">
+<div class="thumbnail style="width:100%; height:auto;"">
   <div class="center"> 
     <div class="row">
      <% @landscapings.each do |landscaping| %>
