--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -22,7 +22,8 @@
     <div class="row">
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
-         <div class="thumbnail" style="width:100%; height:auto;">
+         <div class="thumbnail">
+          <div class="img-responsive">
         <%= link_to image_tag(landscaping.image.url), landscaping %>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
@@ -43,6 +44,7 @@
         <% end %>
         </div>
       </div>
+    </div>
     </div>
     <% end %>
     </div>
