--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,7 +31,9 @@ body{
 }
 
 .thumbnail{
-    vertical-align: middle !important;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .center{
