--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -23,8 +23,8 @@
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
          <div class="thumbnail">
-          <div class="img-responsive">
-        <%= link_to image_tag(landscaping.image.url), landscaping %>
+        <%= link_to image_tag(landscaping.image.url, class: "img-responsive aspect"), landscaping %>
+         </div>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
@@ -43,8 +43,6 @@
         <td><%= link_to 'Destroy', landscaping, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         <% end %>
         </div>
-      </div>
-    </div>
     </div>
     <% end %>
     </div>
