--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -23,8 +23,7 @@
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
          <div class="thumbnail">
-        <%= link_to image_tag(landscaping.image.url, class: "img-responsive aspect"), landscaping %>
-         </div>
+        <%= link_to image_tag(landscaping.image.url, class: "img-responsive"), landscaping %>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
@@ -43,6 +42,7 @@
         <td><%= link_to 'Destroy', landscaping, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         <% end %>
         </div>
+          </div>
     </div>
     <% end %>
     </div>
