--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -23,7 +23,7 @@
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
          <div class="thumbnail">
-        <%= link_to image_tag(landscaping.image.url, class: "img-responsive"), landscaping %>
+        <%= link_to image_tag(landscaping.image.url, class: "img-responsive aspect"), landscaping %>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
