--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,12 @@ body{
     margin-right: auto;
 }
 
+.caption {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .center{
 	text-align: center;
 }
