--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -24,7 +24,7 @@
       <div class="col-md-3">
          <div class="thumbnail">
         <%= link_to image_tag(landscaping.image.url), landscaping %>
-        </div><br>
+        <br>
         <div class="caption">
           <h4><strong><%= landscaping.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
@@ -48,7 +48,7 @@
     </div>
 </div>
 </div>
-
+</div>
 
 <br>
 <br>
