--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -23,7 +23,7 @@
      <% @landscapings.each do |landscaping| %>
       <div class="col-md-3">
          <div class="thumbnail">
-        <%= link_to image_tag(landscaping.image.url), landscaping %>
+        <%= link_to image_tag(landscaping.image.url, class: "img-responsive aspect"), landscaping %>
          </div>
         <br>
         <div class="caption">
