--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,14 +32,14 @@ body{
 
 .thumbnail{
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0.5cm;
+    margin-right: 0.5cm;
 }
 
 .caption {
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0.5cm;
+    margin-right: 0.5cm;
 }
 
 .center{
