--- a/app/views/securities/index.html.erb
+++ b/app/views/securities/index.html.erb
@@ -37,9 +37,10 @@
            <br>
            
            <td><%= link_to 'Show', security, class: "btn btn-success" %></td>
-        
+        <% if (user_signed_in?) && (current_user == residential.user) %>
         <td><%= link_to 'Edit', edit_security_path(security), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy',security, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
