--- a/app/views/roofings/index.html.erb
+++ b/app/views/roofings/index.html.erb
@@ -37,7 +37,7 @@
            <br>
            
            <td><%= link_to 'Show', roofing, class: "btn btn-success" %></td>
-        <% if (user_signed_in?) && (current_user == residential.user) %>
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_roofing_path(roofing), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy',roofing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         <% end %>
