--- a/app/views/solarscreens/index.html.erb
+++ b/app/views/solarscreens/index.html.erb
@@ -37,9 +37,10 @@
            <br>
            
            <td><%= link_to 'Show', solarscreen, class: "btn btn-success" %></td>
-        
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_solarscreen_path(solarscreen), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy',solarscreen, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
