--- a/app/views/titlecompanies/index.html.erb
+++ b/app/views/titlecompanies/index.html.erb
@@ -36,9 +36,10 @@
            <br>
            
            <td><%= link_to 'Show', titlecompany, class: "btn btn-success" %></td>
-        
+         <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_titlecompany_path(titlecompany), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy',titlecompany, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+         <% end %>
         </div>
       </div>
     </div>
