--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -49,7 +49,7 @@
             </div>
              <%= image_tag("wood.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -60,7 +60,7 @@
             </div>
               <%= image_tag("appliancesale.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -97,7 +97,7 @@
             
              <%= image_tag("builder.jpg", :size => "100x100", :alt => "CashBuyer", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -108,7 +108,7 @@
             </div>
              <%= image_tag("buildingmaterial.jpg", :size => "100x100", :alt => "CustomCabinets", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -156,7 +156,7 @@
             </div>
              <%= image_tag("cleaning.png", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -191,7 +191,7 @@
             </div>
              <%= image_tag("fences.png", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -212,7 +212,7 @@
             </div>
              <%= image_tag("electrician.png", :size => "100x100", :alt => "Framing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -225,7 +225,7 @@
             </div>
              <%= image_tag("eavestrouphing.jpg", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -236,7 +236,7 @@
             </div>
              <%= image_tag("exterior.png", :size => "100x100", :alt => "Drywall", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -247,7 +247,7 @@
             </div>
              <%= image_tag("engineer.jpg", :size => "100x100", :alt => "Framing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -296,7 +296,7 @@
             </div>
              <%= image_tag("fireplace.png", :size => "100x100", :alt => "Flooring", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -345,7 +345,7 @@
             </div>
              <%= image_tag("home.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -381,7 +381,7 @@
             </div>
               <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -392,7 +392,7 @@
             </div>
             <%= image_tag("lighting.jpg", :size => "100x100", :alt => "Insulation", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -601,7 +601,7 @@
             </div>
               <%= image_tag("remodel.jpeg", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -686,7 +686,7 @@
             </div>
              <%= image_tag("poolspa.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -699,7 +699,7 @@
             </div>
               <%= image_tag("solar.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
             
         </div>
         </div>
@@ -711,7 +711,7 @@
             </div>
              <%= image_tag("senior.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
