--- a/app/views/taxspecialists/index.html.erb
+++ b/app/views/taxspecialists/index.html.erb
@@ -25,7 +25,7 @@
       <div class="thumbnail">
         <%= link_to image_tag(taxspecialist.image.url), taxspecialist %>
         <div class="caption">
-          <h4><strong><%= staxspecialist.company_name %></strong></h4>
+          <h4><strong><%= taxspecialist.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to taxspecialist.company_website, taxspecialist.company_website %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
