--- a/app/views/mortgages/index.html.erb
+++ b/app/views/mortgages/index.html.erb
@@ -39,9 +39,10 @@
            <br>
            
            <td><%= link_to 'Show', mortgage, class: "btn btn-success" %></td>
-        
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_mortgage_path(mortgage), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', mortgage, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
