--- a/app/views/poolcleaners/index.html.erb
+++ b/app/views/poolcleaners/index.html.erb
@@ -37,9 +37,10 @@
            <br>
            
            <td><%= link_to 'Show', poolcleaner, class: "btn btn-success" %></td>
-        
+         <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_poolcleaner_path(poolcleaner), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', poolcleaner, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
