--- a/app/views/real_estatefirms/index.html.erb
+++ b/app/views/real_estatefirms/index.html.erb
@@ -37,9 +37,10 @@
            <br>
            
            <td><%= link_to 'Show', real_estatefirm, class: "btn btn-success" %></td>
-        
+         <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_real_estatefirm_path(real_estatefirm), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', real_estatefirm, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+         <% end %>
         </div>
       </div>
     </div>
