--- a/app/views/cashbuyers/_form.html.erb
+++ b/app/views/cashbuyers/_form.html.erb
@@ -52,7 +52,12 @@
   <div class="col-md-4">
     <%= f.label :pictures %>  <%= f.file_field :image, class: "form-control" %><br><br>
     </div>
+
+
    <div class="col-md-4">
-    <%= f.submit "Create a Cash Buyer Service", class: "btn btn-warning" %>
+    <%= f.submit "Create Cash Buyer", class: "btn btn-success" %>
   </div>
+  <br>
 <% end %>
+</div>
+</div>
