--- a/app/views/cashbuyers/_form.html.erb
+++ b/app/views/cashbuyers/_form.html.erb
@@ -31,7 +31,7 @@
   </div>
    <div class="col-md-4">
     <%= f.label :zipcode %><br>
-    <%= f.number_field :zipcode, class: "form-control" %><br>
+    <%= f.text_field :zipcode, class: "form-control" %><br>
   </div>
    <div class="col-md-4">
     <%= f.label :contact_name %><br>
