--- a/app/views/hardmoneys/index.html.erb
+++ b/app/views/hardmoneys/index.html.erb
@@ -36,9 +36,10 @@
            <br>
            
            <td><%= link_to 'Show', hardmoney, class: "btn btn-success" %></td>
-        
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_hardmoney_path(hardmoney), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', hardmoney, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+         <% end %>
         </div>
       </div>
     </div>
