--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -156,7 +156,7 @@
             </div>
              <%= image_tag("cleaning.png", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
