--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -60,7 +60,7 @@
             </div>
               <%= image_tag("appliancesale.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
