--- a/app/views/commercialpropertiesforsales/_form.html.erb
+++ b/app/views/commercialpropertiesforsales/_form.html.erb
@@ -34,7 +34,7 @@
   </div>
   <div class="col-md-4">
     <%= label_tag :zip_code %><br>
-    <%= f.number_field :zipcode, class: "form-control" %><br>
+    <%= f.text_field :zipcode, class: "form-control" %><br>
   </div>
   <div class="col-md-4">
     <%= label_tag :city %><br>
