--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -191,7 +191,7 @@
             </div>
              <%= image_tag("fences.png", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -382,7 +382,7 @@
             </div>
               <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -602,7 +602,7 @@
             </div>
               <%= image_tag("remodel.jpeg", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path(@service), class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
