--- a/app/views/rentalproperties/index.html.erb
+++ b/app/views/rentalproperties/index.html.erb
@@ -38,9 +38,10 @@
            <br>
            
            <td><%= link_to 'Show', rentalproperty, class: "btn btn-success" %></td>
-        
+         <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_rentalproperty_path(rentalproperty), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy',rentalproperty, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
