--- a/app/views/privatefirms/show.html.erb
+++ b/app/views/privatefirms/show.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-6">
     <div class="thumbnail">
-       <%= image_tag @@privatefirm.image.url %>
+       <%= image_tag @privatefirm.image.url %>
        <br> 
       <strong><%= @privatefirm.company_name %></strong>
       <br>
